# rf3d

./: .gitmodules  CMakeLists.txt
assets/shaders/: grid.frag  grid.vert  object.vert  object_shader.frag  object_shader.vert  pbr.frag  postprocessing.frag  postprocessing.vert  reflect.frag  skybox.frag  skybox.vert  textures.frag
assets/shaders/deferred/: deferred.frag  deferred.vert  mrt.frag  mrt.vert
assets/shaders/depth_texture/: depth_texture.frag  depth_texture.vert  depth_write.vert
assets/shaders/fxaa/: fxaa.frag  fxaa.vert
assets/shaders/geometry_shader/: normal.frag  normal.geom  normal.vert
assets/shaders/opengl/: object_shader.frag  object_shader.vert
assets/shaders/skybox/: reflect.vert  skybox.vert
assets/shaders/stencil_buffer/: outline.frag  outline.vert  toon.frag  toon.vert
assets/shaders/tessellation/: tessellation.frag  tessellation.tesc  tessellation.tese  tessellation.vert
assets/shaders/textures/: textures.frag  textures.vert
assets/shaders/vulkan/: object_shader.frag  object_shader.vert
examples/: CMakeLists.txt
examples/base/: camera.cpp  camera.h  example.cpp  example.h  input.cpp  input.h  mesh.cpp  mesh.h  utils.h
examples/deferred/: deferred.cpp
examples/depth_texture/: depth_texture.cpp
examples/fxaa/: CMakeLists.txt  fxaa.cpp
examples/fxaa/src/: main.cpp
examples/geometry_shader/: CMakeLists.txt  geometry_shader.cpp
examples/geometry_shader/src/: main.cpp
examples/pbr/: CMakeLists.txt  pbr.cpp
examples/pbr/src/: main.cpp
examples/postprocessing/: CMakeLists.txt
examples/postprocessing/src/: main.cpp
examples/skybox/: CMakeLists.txt  skybox.cpp
examples/skybox/src/: main.cpp
examples/stencil_buffer/: stencil_buffer.cpp
examples/tesselation/: tesselation.cpp
examples/textures/: CMakeLists.txt  textures.cpp
examples/textures/src/: main.cpp
framework/: CMakeLists.txt  logger.cpp  main.cpp  platform.h
framework/renderer/: gpu_attachment.h  gpu_core.h  gpu_descriptor_set.h  gpu_index_buffer.h  gpu_render_pass.h  gpu_render_target.h  gpu_shader.h  gpu_texture.h  gpu_uniform_buffer.h  gpu_utils.cpp  gpu_vertex_buffer.h  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h
framework/renderer/vulkan/: vulkan_attachment.cpp  vulkan_attachment.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_context.h  vulkan_debug_marker.cpp  vulkan_debug_marker.h  vulkan_descriptor_builder.cpp  vulkan_descriptor_layout_cache.cpp  vulkan_descriptor_pools.cpp  vulkan_descriptor_pools.h  vulkan_descriptor_set.cpp  vulkan_descriptor_set.h  vulkan_device.cpp  vulkan_fence.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_index_buffer.cpp  vulkan_index_buffer.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_uniform_buffer.cpp  vulkan_uniform_buffer.h  vulkan_utils.cpp  vulkan_utils.h  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.h
src/: camera.cpp  logger.h  main.cpp
src/renderer/: gpu_attachment.h  gpu_attribute_array.h  gpu_buffer.h  gpu_core.h  gpu_descriptor.h  gpu_descriptor_set.h  gpu_render_pass.h  gpu_render_target.h  gpu_shader.h  gpu_shader_buffer.h  gpu_texture.h  gpu_uniform_buffer.h  gpu_utils.cpp  gpu_utils.h  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h
src/renderer/opengl/: opengl_attachment.cpp  opengl_attachment.h  opengl_backend.cpp  opengl_backend.h  opengl_buffer.cpp  opengl_buffer.h  opengl_descriptor.cpp  opengl_descriptor.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_render_pass.cpp  opengl_render_pass.h  opengl_shader.cpp  opengl_shader.h  opengl_shader_buffer.cpp  opengl_shader_buffer.h  opengl_texture.cpp  opengl_texture.h  opengl_utils.cpp  opengl_utils.h  opengl_vertex_array.cpp  opengl_vertex_array.h
src/renderer/vulkan/: vulkan_attachment.cpp  vulkan_attachment.h  vulkan_attribute_array.cpp  vulkan_attribute_array.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_descriptor_builder.cpp  vulkan_descriptor_builder.h  vulkan_descriptor_layout_cache.cpp  vulkan_descriptor_layout_cache.h  vulkan_descriptor_pools.cpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.h  vulkan_device.cpp  vulkan_device.h  vulkan_fence.cpp  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_index_buffer.cpp  vulkan_index_buffer.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_shader_buffer.cpp  vulkan_shader_buffer.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  (+7 more)
